umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_wemsud.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 28
sum_formula: C4H16Cl2CoN4
graph6: ZsaC?_H@?Ca?C?A?@??G?@??A??C??A??@???G??@???A???C???A???@???
