umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_jmol_xowdui.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 96
bond_count: 126
sum_formula: C60F36
graph6: ~?@_?????????????????????????????????????????????????????????????????????????????????????????????????????????_?????O?????c?????G_????@A?????CC????AGC?????G??????C?????A@???????GA??????_C????G@???????@??????G?_???????G?_?????@?A????C?C????????G??????O?G????????C?C????A?@??_??????G?A???????_??????G?@?????????@???????C??_?C???????G??_????O?@??A???????C???????A??G??????????G???????@??C??C???????@???_????C??G??A????????_????????_?@???????????@?????????O??_??C?????A??G???_???????@???A????????C???C?????G??G???C?????C??G???A????????C????_?????_?@????C????????G????O?????O??_????_?????O?@?????_???????@?????O?????G??_????C????????G?????_?????O?@?????A??????_?C?????C??????O?G??????????????G????????????O?C????????????@?@?????????????C?G?????????????C?_?????????????CP
