umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ketcher_aromatic-structures.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 68
bond_count: 75
sum_formula: C66N2
graph6: "~?@Chc?GC@?GG_??@??_?G?@?@C?A???G??C?@@???????_??@???@???C????O???B???@?????G???CG?????????@?????G?????_????@?????P?????G??????G?????`?????????????G??????G??????C??????@??????AG??????G???????@???????@???????__???????_???????@????????C???????AG?????????????????C????????@?????????G?????????_????????P?????????O??????????_?????????G????????@@??????????_??????????G??????????G?????????AC"
