umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ketcher_benzene-bond-fg.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 13
bond_count: 13
sum_formula: C11O2
graph6: LY_X?CA?O?_A?C
